--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="col-md-3">
                     <h4>20XX1583 김기범</h4>
                     <a href = https://github.com/jimi567 class="portfolio-card">
-                        <img src="assets/imgs/ㄱㄱㅂ.png" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="./assets/imgs/ㄱㄱㅂ.png" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                     <ul style="float: left;">
