--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="col-md-3">
                     <h4>20XX1583 김기범</h4>
                     <a href = https://github.com/jimi567 class="portfolio-card">
-                        <img src="https://github.com/kookmin-sw/capstone-2023-20/blob/GitPage/assets/imgs/%E3%84%B1%E3%84%B1%E3%85%82.PNG" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets.imgs/ㄱㄱㅂ.PNG" class="portfolio-card-img">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                     <ul style="float: left;">
