--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="col-md-3">
                     <h4>20XX1583 김기범</h4>
                     <a href = https://github.com/jimi567 class="portfolio-card">
-                        <img src="assets.imgs/ㄱㄱㅂ.PNG" class="portfolio-card-img">
+                        <img src="assets/imgs/ㄱㄱㅂ.PNG" class="portfolio-card-img">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                     <ul style="float: left;">
