--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="col-md-3">
                     <h4>20XX0538 김원진</h4>
                     <a href= "https://github.com/oen0thera" class="portfolio-card">
-                        <img class="portfolio-card-img" src="assets/imgs/김원진.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img class="portfolio-card-img" src="assets/imgs/김원진.PNG" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                     <ul>
@@ -100,7 +100,7 @@
                 <div class="col-md-3">
                     <h4>20XX0655 곽혜정</h4>
                     <a href="https://github.com/kwawak" class="portfolio-card">
-                        <img class="portfolio-card-img" src="assets/imgs/곽혜정.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img class="portfolio-card-img" src="assets/imgs/곽혜정.PNG" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <ul style="float: left;">
@@ -120,7 +120,7 @@
                 <div class="col-md-3">
                     <h4>20XX1656 유성현</h4>
                     <a href="https://github.com/SeongHyeon0409" class="portfolio-card">
-                        <img src="assets/imgs/유성현.png" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/유성현.PNG" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                         <span class="portfolio-card-overlay">
                         <span class="portfolio-card-caption">
                                 <ul style="float: left;">
