--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 		<title>WIMF 소개 페이지</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="Assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="Assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper">
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/title.PNG" /></span>
+						<span class="logo"><img src="images/title.png" /></span>
 						<h1>WIMF</h1>
 						<p>캡스톤 디자인<br />
 						built by <a href="https://github.com/kookmin-sw/capstone-2023-20">@팀20</a>.</p>
@@ -45,7 +45,7 @@
 										</p>
 
 									</div>
-									<span class="image"><img src="images/WIMF.PNG" alt="" /></span>
+									<span class="image"><img src="images/WIMF.png" alt="" /></span>
 								</div>
 								<div class="spotlight">
 									<div class="content">
@@ -168,13 +168,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="Assets/js/jquery.min.js"></script>
+			<script src="Assets/js/jquery.scrollex.min.js"></script>
+			<script src="Assets/js/jquery.scrolly.min.js"></script>
+			<script src="Assets/js/browser.min.js"></script>
+			<script src="Assets/js/breakpoints.min.js"></script>
+			<script src="Assets/js/util.js"></script>
+			<script src="Assets/js/main.js"></script>
 
 	</body>
 </html>
