--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/title.png" /></span>
 						<h1>WIMF</h1>
-						<p>캡스톤 디자인<br />
+						<p>Capstone-Design<br />
 						built by <a href="https://github.com/kookmin-sw/capstone-2023-20">@팀20</a>.</p>
 					</header>
 
