--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>소개 영상</h2>
-									<p>아래 소개 영상.</p>
+									<a href = "https://www.youtube.com/watch?v=A92wvyZtpd4">트레일러영상보기.</a>
 								</header>
 
 
