--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 										<header class="major">
 											<h2>개요</h2>
 										</header>
-										<p> &nbsp;&nbsp;&nbsp;저희 프로젝트는 기존의 1인형 생존형 공포 퍼즐 게임의 틀을 벗어나 포톤 서버를 활용한 2인 기반
+										<p class="left" > &nbsp;&nbsp;&nbsp;저희 프로젝트는 기존의 1인형 생존형 공포 퍼즐 게임의 틀을 벗어나 포톤 서버를 활용한 2인 기반
 											협동 체제를 적용, 이를 인게임 시스템으로 확장함으로써 현재 게임시장에서 고착화된 1인형 공포게임
 											형태의 변화를 시도하려 한다. 현재까지 기획한 바는 2인형 협동 퍼즐게임인 ‘we were here’를 벤치마킹한
 											것으로, 서로 다른 플레이어의 소통 수단을 인게임 마이크로 제한하고 두 플레어는 정해진 스토리라인을 따라
@@ -45,20 +45,14 @@
 										</p>
 
 									</div>
-									<span class="image"><img src="images/WIMF.png" alt="" /></span>
+									<img  class="right" src="images/포스터.PNG"  width="30%" height="30%"  alt="" />
 								</div>
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
 											<h2>게임 시나리오.</h2>
 										</header>
-
-										<p>
-											&nbsp;평소 승연과 예담, 그리고 A는 뗄래야 뗄 수 없는 절친관계로 항상 붙어다니기 일수였다. 그러던 어느날 A가 갑자기 실종이 되는데, 실종된 A를 찾기 위해 학교 친구들과 선생님들, 그리고 경찰들까지 총 동원하여 A를 찾기위해 수색해봤지만 어떠한 단서도 찾지 못한 채 사건이 종결되었다. 승연과 예담이 기억하는 A의 마지막 모습은 놓고 온 물건을 찾으러 밤에 학교를 갔다오겠다던 A였다. 이에 승연과 예담은 어떠한 단서 라도 찾을 수 있을까 하여 밤의 학교를 몰래 찾아가게된다.
-											밤의 학교를 찾아간 승연과 예담은 학교를 몰래 뒤져보기 시작한다. 그러던 중 둘은 각자 화장실에 갔는데, 예담이가 화장실에 있는 사이 정신을 차려보니 예담 혼자 폐허가 된 건물에 와 있었다. 갑자기 사라진 예담을 찾기 위해 승연은 예담에게 전화를 걸었고, 다행인지 예담과 승연 사이에 핸드폰 통화가 가능했다. 예담은 폐허가 된 건물을 둘러보니 건물이 낡고 무너져있긴 했지만 건물의 모습이 본래 자신이 있었던 학교와 같은 모습이란걸 깨달았다.
-											예담은 사태파악을 위해 건물을 돌아다니다 보니 A가 쓴 듯한 쪽지를 발견하였고, 이곳이 미래의 학교건물이란 것을 알게되었고 A의 행적을 찾아다니며 이 곳에서 무슨일이 벌어졌고, 무슨일이 벌어지고 있는지 사건을 추적하기 시작한다.
-											단서를 수집하면서 미래의 학교에서 여러 사건들을 겪게 되는데 이를 통해 현재의 학교에 있는 승연이 특정 행동을 취하면 미래에 있는 예담의 학교에서 영향이 간다는 사실을 알게 되었다. 예담과 승연이 이를 이용하여 서로 협동하며 많은 위험들과 사건들을 해결하고 헤쳐나가기 시작한다.
-										</p>
+										<span></span><video src="images/시작컷씬.MP4" controls width = "85%" height = "100%" alt = "해당 브라우저에서는 재생 불가능합니다."></video></span>
 
 									</div>
 
@@ -66,17 +60,19 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>플레이 방식</h2>
+											<h2>플레이 방식 및 조작법</h2>
 										</header>
-										<p>  &nbsp;&nbsp; 유니티 기반 2인용 멀티플레이 방탈출 게임으로 플레이어는 게임시작시
-											포톤서버를 이용한 로비로 입장, 서로의 캐릭터를 정해 시작하며, 둘 다 시작 준비 버튼을 눌렀을
-											경우에 시작되게 하여 본격적인 게임 시작 전 각 플레이어가 어떤 캐릭터를 선택할지를 정하고
-											각각 승연, 예담을 1인칭으로 플레이하게 된다. 방에 입장한 플레이어들은 서로의 위치나,
-											상태를 인지하지 못한채 오직 마이크를 통해서만 소통할 수 있으며 가이드를 따라 각각의 퍼즐요소들을
-											클리어하며 스토리라인을 따라 각 스테이지를 클리어하고,
-											마지막 스테이지까지 도달해서 학교를 탈출하여 최종 클리어한다.
-										</p>
-									</div>
+											<p>  &nbsp;&nbsp; 유니티 기반 2인용 멀티플레이 방탈출 게임으로 플레이어는 게임시작시
+												포톤서버를 이용한 로비로 입장, 서로의 캐릭터를 정해 시작하며, 둘 다 시작 준비 버튼을 눌렀을
+												경우에 시작되게 하여 본격적인 게임 시작 전 각 플레이어가 어떤 캐릭터를 선택할지를 정하고
+												각각 승연, 예담을 1인칭으로 플레이하게 된다. 방에 입장한 플레이어들은 서로의 위치나,
+												상태를 인지하지 못한채 오직 마이크를 통해서만 소통할 수 있으며 가이드를 따라 각각의 퍼즐요소들을
+												클리어하며 스토리라인을 따라 각 스테이지를 클리어하고,
+												마지막 스테이지까지 도달해서 학교를 탈출하여 최종 클리어한다.
+											</p>
+										</div>
+											<img class="right" src = "images/조작법.PNG" width = "50%" height = "50%"/>
+
 								</div>
 								<div class="spotlight">
 									<div class="content">
@@ -94,6 +90,22 @@
 									</div>
 
 								</div>
+								<div class="spotlight">
+									<div class="content">
+										<header class="major">
+											<h2>인게임 뷰</h2>
+										</header>
+										<div class="gallery">
+											<img class="gallery img"src="images/InGame1.PNG" alt="Image 1">
+											<img class="gallery img" src="images/InGame2.PNG" alt="Image 2">
+											<img class="gallery img" src="images/InGame3.PNG" alt="Image 2">
+											<img class="gallery img" src="images/InGame4.PNG" alt="Image 1">
+											<img class="gallery img" src="images/InGame5.PNG" alt="Image 2">
+											<img class="gallery img" src="images/InGame6.PNG" alt="Image 3">
+										</div>
+									</div>
+
+								</div>
 							</section>
 
 						<!-- 구조 -->
@@ -101,7 +113,7 @@
 								<header class="major">
 									<h2>프로젝트 구조</h2>
 								</header>
-								<img src = "images/전체구조.PNG" style="width: 70%; height: auto;"/>
+								<img src = "images/전체구조.PNG" style="width: 70%; height:; auto;"/>
 								<p >로컬플레이어는 유니티의 메인타이틀 씬을 통해 게임 온라인 환경에 접속하여, 로비에서 게임 플레이할 방을 입장하거나, 생성 할 수 있다.
 								한 방에 두 명의 플레이어가 모이고, 서로 합의하에 게임을 시작하면 포톤 서버에서 인게임씬을 빌드하여 제공한다.</p>
 							</section>
