--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 										</p>
 
 									</div>
-									<img  class="right" src="images/포스터.PNG"  width="30%" height="30%"  alt="" />
+									<img  class="right" src="images/포스터.png"  width="30%" height="30%"  alt="" />
 								</div>
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
 											<h2>게임 시나리오.</h2>
 										</header>
-										<span></span><video src="images/시작컷씬.MP4" controls width = "85%" height = "100%" alt = "해당 브라우저에서는 재생 불가능합니다."></video></span>
+										<span></span><video src="images/시작컷씬.mp4" controls width = "85%" height = "100%" alt = "해당 브라우저에서는 재생 불가능합니다."></video></span>
 
 									</div>
 
@@ -70,8 +70,9 @@
 												클리어하며 스토리라인을 따라 각 스테이지를 클리어하고,
 												마지막 스테이지까지 도달해서 학교를 탈출하여 최종 클리어한다.
 											</p>
+										<img class="right" src = "images/조작법.PNG" width = "50%" height = "50%"/>
 										</div>
-											<img class="right" src = "images/조작법.PNG" width = "50%" height = "50%"/>
+											
 
 								</div>
 								<div class="spotlight">
