--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 					<header class="major">
 						<h2>개요</h2>
 					</header>
-					<div class="container">
-						<div class="left">
+
+						<div >
+							<img  class="right" src="images/포스터.png"  width="100%" height="100%"  alt="" />
 							<p > &nbsp;&nbsp;&nbsp;저희 프로젝트는 기존의 1인형 생존형 공포 퍼즐 게임의 틀을 벗어나 포톤 서버를 활용한 2인 기반
 								협동 체제를 적용, 이를 인게임 시스템으로 확장함으로써 현재 게임시장에서 고착화된 1인형 공포게임
 								형태의 변화를 시도하려 한다. 현재까지 기획한 바는 2인형 협동 퍼즐게임인 ‘we were here’를 벤치마킹한
@@ -47,11 +48,8 @@
 								플레이하며 갇힌 학교를 탈출하는 컨셉으로 설정하였다.
 							</p>
 						</div>
-						<div class="right">
-							<img  class="right" src="images/포스터.png"  width="100%" height="100%"  alt="" />
-						</div>
 
-					</div>
+
 
 				</div>
 
@@ -71,8 +69,7 @@
 					<header class="major">
 						<h2>플레이 방식 및 조작법</h2>
 					</header>
-					<div class="container">
-						<div class="left">
+					<img class="right" src = "images/조작법.PNG" width = "100%" height = "100%"/>
 							<p>  &nbsp;&nbsp; 유니티 기반 2인용 멀티플레이 방탈출 게임으로 플레이어는 게임시작시
 								포톤서버를 이용한 로비로 입장, 서로의 캐릭터를 정해 시작하며, 둘 다 시작 준비 버튼을 눌렀을
 								경우에 시작되게 하여 본격적인 게임 시작 전 각 플레이어가 어떤 캐릭터를 선택할지를 정하고
@@ -81,11 +78,8 @@
 								클리어하며 스토리라인을 따라 각 스테이지를 클리어하고,
 								마지막 스테이지까지 도달해서 학교를 탈출하여 최종 클리어한다.
 							</p>
-						</div>
-						<div class="right">
-							<img class="right" src = "images/조작법.PNG" width = "100%" height = "100%"/>
-						</div>
-					</div>
+
+
 
 				</div>
 
