--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 					<div >
 						<img src="images/포스터.png"  width="100%" height="100%"  alt="" />
-						<p > &nbsp;&nbsp;&nbsp;저희 프로젝트는 기존의 1인형 생존형 공포 퍼즐 게임의 틀을 벗어나 포톤 서버를 활용한 2인 기반
+						<p > &nbsp;&nbsp;&nbsp;우리 프로젝트는 기존의 1인형 생존형 공포 퍼즐 게임의 틀을 벗어나 포톤 서버를 활용한 2인 기반
 							협동 체제를 적용, 이를 인게임 시스템으로 확장함으로써 현재 게임시장에서 고착화된 1인형 공포게임
 							형태의 변화를 시도하려 한다. 현재까지 기획한 바는 2인형 협동 퍼즐게임인 ‘we were here’를 벤치마킹한
 							것으로, 서로 다른 플레이어의 소통 수단을 인게임 마이크로 제한하고 두 플레어는 정해진 스토리라인을 따라
@@ -133,7 +133,7 @@
 		<section id="second" class="main special">
 			<header class="major">
 				<h2>소개 영상</h2>
-				<a href = "https://www.youtube.com/watch?v=A92wvyZtpd4">트레일러영상보기.</a>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/MGkdOi1_Ihc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</header>
 
 
